# 3ch

./: db.sqlite3  pyproject.toml  tst.py
media/: Major_Crimes_by_HEALTH__Cyberpunk_-_Edgerunners_OST-FRSTaBZfxK4.webm  blob  blob_6KiRnHy  blob_9uAf57Z  blob_FJqm23r  blob_KwGTrY8  blob_c1XBH1F  blob_lW5KIu3  blob_qVBjXJx  blob_s3GHUl8  blob_uc0EMgL  blob_wYMkkHh  blob_zFwRlgc  blob_zeIgqSg  blob_znuuIJe
media/media/: FiBOW9saAAECgDs.jfif
myapp/: admin.py  bt.py  forms.py  models.py  urls.py  views.py
myapp/management/commands/: bot.py
myapp/migrations/: 0001_initial.py  0002_post_audio_alter_post_id_alter_song_id_and_more.py  0003_alter_post_content.py  0004_video.py
myapp/static/css/: global.css
myapp/static/js/: record.js
myapp/templates/: chat.html  clips.html  error.html  index.html  lib.html  login.html  navbar.html  note.html  notes.html  player.html  register.html
project/: asgi.py  settings.py  urls.py
